--- a/mycrm/core/templates/core/base.html
+++ b/mycrm/core/templates/core/base.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
-    <nav class="py-4  bg-teal-500">
-        <a href="/" class="text-white">My CRM</a>
+    <nav class="py-4 px-6 flex justify-between bg-teal-500">
+      <a href="/" class="text-white">MyCRM</a>
+
+      <div class="space-x-4">
+        <a href="{% url 'about' %}" class="text-white">About</a>
+        <a href="/" class="py-3 px-6 bg-teal-600 rounded-xl text-white">
+          Log in</a
+        >
+        <a href="/" class="py-3 px-6 bg-teal-400 rounded-xl text-white">
+          Sign up</a
+        >
+      </div>
     </nav>
+
+    {% block content %} {% endblock %}
+    <footer class="py-8 text-center bg-gray-200">
+      <p class="text-xs text-gray-700">Copyright (c) 2023- MyCRM</p>
+    </footer>
   </body>
 </html>
