--- a/mycrm/core/templates/core/base.html
+++ b/mycrm/core/templates/core/base.html
@@ -15,7 +15,7 @@
         <a href="/" class="py-3 px-6 bg-teal-600 rounded-xl text-white">
           Log in</a
         >
-        <a href="/" class="py-3 px-6 bg-teal-400 rounded-xl text-white">
+        <a href="{% url 'signup' %}" class="py-3 px-6 bg-teal-400 rounded-xl text-white">
           Sign up</a
         >
       </div>
